Display recording/muted status on canvas, fix stretched image on canvas

--- a/frontend/src/css/Room.css
+++ b/frontend/src/css/Room.css
@@ -27,6 +27,7 @@
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-crisp-edges;
     image-rendering: pixelated;
+    font-family: Roboto, sans-serif;
 }
 
 #chat {
